--- a/코드와 그림으로 마스터하는 알고리즘.vcxproj.filters
+++ b/코드와 그림으로 마스터하는 알고리즘.vcxproj.filters
@@ -13,19 +13,45 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="소스 파일\정렬">
-      <UniqueIdentifier>{b53500ad-afb5-46ae-81c0-550fd3497e06}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="병합정렬.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="선택정렬.c">
-      <Filter>소스 파일\정렬</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="퀵 정렬.c">
-      <Filter>소스 파일\정렬</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="병합정렬.c">
-      <Filter>소스 파일\정렬</Filter>
+    <ClCompile Include="linkedlist.c">
+      <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3_01.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="해시\3_02.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="hashsearch.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="hashsearch_chain.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hashdef.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="hashsearch_chain.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="heashsearch.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lindedlist.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
