--- a/해시/해시.vcxproj
+++ b/해시/해시.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c66f7b48-bb9d-4b31-8845-18ca80a09fa6}</ProjectGuid>
-    <RootNamespace>코드와그림으로마스터하는알고리즘</RootNamespace>
+    <ProjectGuid>{f5eb8b95-f291-4f2e-aadc-884c901dde80}</ProjectGuid>
+    <RootNamespace>해시</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>정렬</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,22 +138,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="3_01.c" />
-    <ClCompile Include="hashsearch.c" />
-    <ClCompile Include="hashsearch_chain.c" />
-    <ClCompile Include="linkedlist.c" />
-    <ClCompile Include="병합정렬.c" />
-    <ClCompile Include="선택정렬.c" />
-    <ClCompile Include="퀵 정렬.c" />
-    <ClCompile Include="해시\3_02.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="hashdef.h" />
-    <ClInclude Include="hashsearch_chain.h" />
-    <ClInclude Include="heashsearch.h" />
-    <ClInclude Include="lindedlist.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
