--- a/해시/해시.vcxproj
+++ b/해시/해시.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f5eb8b95-f291-4f2e-aadc-884c901dde80}</ProjectGuid>
+    <ProjectGuid>{52731f07-786d-4e45-931c-9f864d35640b}</ProjectGuid>
     <RootNamespace>해시</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -138,6 +138,18 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="..\3_01.c" />
+    <ClCompile Include="..\hashsearch.c" />
+    <ClCompile Include="..\hashsearch_chain.c" />
+    <ClCompile Include="..\linkedlist.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\hashdef.h" />
+    <ClInclude Include="..\hashsearch_chain.h" />
+    <ClInclude Include="..\heashsearch.h" />
+    <ClInclude Include="..\lindedlist.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
