--- a/코드와 그림으로 마스터하는 알고리즘.vcxproj
+++ b/코드와 그림으로 마스터하는 알고리즘.vcxproj
@@ -18,6 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="정렬\병합정렬.c" />
+    <ClCompile Include="정렬\선택정렬.c" />
+    <ClCompile Include="정렬\퀵 정렬.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -139,11 +144,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="병합정렬.c" />
-    <ClCompile Include="선택정렬.c" />
-    <ClCompile Include="퀵 정렬.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
