--- a/그래프/그래프.vcxproj.filters
+++ b/그래프/그래프.vcxproj.filters
@@ -15,8 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="splitList.c">
+    <ClCompile Include="skipList.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GraphLinkedList.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="linkedlist.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="linkedgraph.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="linkedlist.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="linkedgraph.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
