--- a/그래프/그래프.vcxproj.filters
+++ b/그래프/그래프.vcxproj.filters
@@ -48,6 +48,21 @@
     <ClCompile Include="all_pairs_sp.c">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="heap.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="kidneyTree.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="grapharrayheap.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mst_kruskal.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="linkedstack.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="linkedlist.h">
@@ -69,6 +84,15 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="all_pairs_sp.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="grapharrayheap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mst_kruskal.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="linkedstack.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
