부분가방 문제

--- a/탐욕 알고리즘/탐욕 알고리즘.vcxproj
+++ b/탐욕 알고리즘/탐욕 알고리즘.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="fractionalknapsack.c" />
     <ClCompile Include="소스.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="fractionalknapsack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
