--- a/탐욕 알고리즘/탐욕 알고리즘.vcxproj.filters
+++ b/탐욕 알고리즘/탐욕 알고리즘.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="소스.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="fractionalknapsack.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="fractionalknapsack.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
