허프만 트리 작성... 허프만 테이블은 내일까지...

--- a/탐욕 알고리즘/탐욕 알고리즘.vcxproj
+++ b/탐욕 알고리즘/탐욕 알고리즘.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="fractionalknapsack.c" />
+    <ClCompile Include="HuffmanMain.c" />
     <ClCompile Include="소스.c" />
   </ItemGroup>
   <ItemGroup>
