--- a/탐욕 알고리즘/탐욕 알고리즘.vcxproj.filters
+++ b/탐욕 알고리즘/탐욕 알고리즘.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="fractionalknapsack.c">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HuffmanMain.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fractionalknapsack.h">
