--- a/분할정복/분할정복.vcxproj
+++ b/분할정복/분할정복.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6897d91b-1078-4cba-a843-c10a35aa972f}</ProjectGuid>
-    <RootNamespace>탐욕알고리즘</RootNamespace>
+    <ProjectGuid>{99f9b0f7-e709-467e-9b02-c5bf0f489ec6}</ProjectGuid>
+    <RootNamespace>분할정복</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,16 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="arrayheap.c" />
-    <ClCompile Include="fractionalknapsack.c" />
-    <ClCompile Include="huffman.c" />
-    <ClCompile Include="HuffmanMain.c" />
-    <ClCompile Include="소스.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="arrayheap.h" />
-    <ClInclude Include="fractionalknapsack.h" />
-    <ClInclude Include="huffman.h" />
+    <ClCompile Include="closestPath.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
