--- a/동적계획법/동적계획법.vcxproj.filters
+++ b/동적계획법/동적계획법.vcxproj.filters
@@ -15,15 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="closest.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="closestPath.c">
-      <Filter>리소스 파일</Filter>
+    <ClCompile Include="DynamicFibo.c">
+      <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main.c">
+    <ClCompile Include="coinChange.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
