--- a/백트래킹/백트래킹.vcxproj.filters
+++ b/백트래킹/백트래킹.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="tspBackTracking.c">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="EightQuuens.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tspBackTracking.h">
