--- a/백트래킹/백트래킹.vcxproj
+++ b/백트래킹/백트래킹.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EightQuuens.c" />
     <ClCompile Include="tspBackMain.c" />
     <ClCompile Include="tspBackTracking.c" />
   </ItemGroup>
