--- a/백트래킹/백트래킹.vcxproj.filters
+++ b/백트래킹/백트래킹.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="EightQuuens.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="mazeBackMain.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tspBackTracking.h">
